--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ REFRESH_TOKEN = 'fP4RrguESdzX6vm83MWLT79xtFheGknsjAacyVbKJwNB5H2YUC'
 
 ACCESS_TOKEN_EXPIRE = 5
 REFRESH_TOKEN_EXPIRE = 7
+
+process.env.NODE_ENV = "production"
